--- a/Index.html
+++ b/Index.html
@@ -68,6 +68,6 @@
   <?!= include('SettingsCSS'); ?>
   <?!= include('styleCSS'); ?>
   <?!= include('javascript'); ?>
-
+  <!-- ?!= include('javascriptChildRow'); ? -->
 </div>
 </html>
