--- a/SettingsCSS.html
+++ b/SettingsCSS.html
@@ -40,11 +40,11 @@
        tr.shown td.details-control {
        background: url('https://next.datatables.net/examples/resources/details_close.png') no-repeat center center;
        }  
-       tr.shown td.details-control td.child1 {
+       tr.shown td.details-control {
        width: "50%"; 
        background: "#cbe368";
        }
-       tr.shown td.details-control td.child2 {
+       tr.shown td.details-control{
        width: "50%"; 
        background: "#cbc9a8";
        }
